infra/kube.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: snow-tracker
  labels:
    name: snow-tracker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: snow-tracker
  name: snow-tracker-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: snow-tracker-service
      app.kubernetes.io/part-of: snow-tracker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: snow-tracker-service
        app.kubernetes.io/part-of: snow-tracker
    spec:
      containers:
        - name: service
          image:  docker.local.kye.dev/snow-tracker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: snow-tracker
  name: snow-tracker-service
spec:
  selector:
    app.kubernetes.io/name: snow-tracker-service
    app.kubernetes.io/part-of: snow-tracker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snow-tracker-ingress
  namespace: snow-tracker
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: snow.kye.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snow-tracker-service
                port:
                  number: 80
  tls:
    - secretName: snow-tracker-cert
      hosts:
        - snow.kye.dev


# kubectl port-forward -n snow-tracker service/snow-tracker-service 8888:80
